--- a/index.ipynb
+++ b/index.ipynb
@@ -217,14 +217,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for i in travel_destinations:\n",
-    "        i = i.title()"
+    "        i = i.title()\n",
+    "    return i"
    ]
   },
   {
