--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     "def capitalize_countries():\n",
     "    for i in travel_destinations:\n",
     "        i = i.title()\n",
-    "    return i"
+    "    return travel_destination"
    ]
   },
   {
