--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for i in range():\n",
+    "    for i in range(0,len(tra)):\n",
     "        i = i.title()\n",
     "    return travel_destinations"
    ]
