Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,8 +223,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for i in range(0,len(tra)):\n",
-    "        i = i.title()\n",
+    "    for i in range(0,len(travel_destinations)):\n",
+    "        t\n",
     "    return travel_destinations"
    ]
   },
